--- a/index.html
+++ b/index.html
@@ -185,14 +185,41 @@
     </div>
   </div>
 
-  <!-- Digital Credentials -->
+ <!-- Digital Credentials -->
   <section id="digital-credentials" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Digital Credentials</h2>
     <p class="mb-4">I’ve received three digital credentials from UT Tyler. Click “Verify” to confirm each on Validity.id:</p>
     <div class="row g-4">
-      <!-- Cards omitted for brevity -->
+      <div class="col-12 col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Master of Science in Mechanical Engineering</h5>
+            <p class="card-text mb-4">College of Engineering, UT Tyler<br>Issued: 05/04/2024</p>
+            <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024" target="_blank" class="btn btn-primary mt-auto">Verify Credential →</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Graduate Certificate: Thermal-Fluid Systems</h5>
+            <p class="card-text mb-4">College of Engineering, UT Tyler<br>Issued: 05/04/2024</p>
+            <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024" target="_blank" class="btn btn-primary mt-auto">Verify Credential →</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Graduate Certificate: Systems &amp; Controls</h5>
+            <p class="card-text mb-4">College of Engineering, UT Tyler<br>Issued: 05/04/2024</p>
+            <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024" target="_blank" class="btn btn-primary mt-auto">Verify Credential →</a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+
 
   <!-- Resume -->
   <section id="resume" class="container py-4" data-aos="fade-up">
