--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <!-- Hero Section -->
   <section id="top" class="hero" data-aos="fade-up">
-    <img src="images/Profile.JPG" alt="Profile">
+    <img src="images/Profile.JPEG" alt="Profile">
     <h1 class="mb-2">Amrit Thapa</h1>
     <p class="lead">Mechanical Engineer | CFD &amp; FEA | Thermal &amp; Utility Systems</p>
   </section>
