--- a/indexcopy.html
+++ b/indexcopy.html
@@ -71,7 +71,7 @@
     }
     .card-title { color: var(--primary); }
 
-    /* ---------- Certificates Grid ---------- */
+    /* ---------- Certificates Grid & Images ---------- */
     #certificates .cert-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
@@ -95,7 +95,8 @@
   </style>
 </head>
 <body data-theme="light">
-  <!-- Navbar with Dark/Light toggle -->
+
+  <!-- Navbar with Dark/Light Toggle -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container-fluid">
       <a class="navbar-brand" href="#top">Amrit Thapa</a>
@@ -126,7 +127,7 @@
 
   <!-- Hero Section -->
   <section id="top" class="hero" data-aos="fade-up">
-    <img src="images/Profile.JPG" alt="Profile">
+    <img src="images/Profile.JPEG" alt="Profile">
     <h1 class="mb-2">Amrit Thapa</h1>
     <p class="lead">Mechanical Engineer | CFD &amp; FEA | Thermal &amp; Utility Systems</p>
   </section>
@@ -184,14 +185,77 @@
     </div>
   </div>
 
-  <!-- Resume, Contact, Footer omitted for brevity -->
+ <!-- Digital Credentials -->
+  <section id="digital-credentials" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">Digital Credentials</h2>
+    <p class="mb-4">I’ve received three digital credentials from UT Tyler. Click “Verify” to confirm each on Validity.id:</p>
+    <div class="row g-4">
+      <div class="col-12 col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Master of Science in Mechanical Engineering</h5>
+            <p class="card-text mb-4">College of Engineering, UT Tyler<br>Issued: 05/04/2024</p>
+            <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024" target="_blank" class="btn btn-primary mt-auto">Verify Credential →</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Graduate Certificate: Thermal-Fluid Systems</h5>
+            <p class="card-text mb-4">College of Engineering, UT Tyler<br>Issued: 05/04/2024</p>
+            <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024" target="_blank" class="btn btn-primary mt-auto">Verify Credential →</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Graduate Certificate: Systems &amp; Controls</h5>
+            <p class="card-text mb-4">College of Engineering, UT Tyler<br>Issued: 05/04/2024</p>
+            <a href="https://validity.id/lookup-qr?first=Amrit&last=Thapa&birth=09161997&school=UTTyler&year=2024" target="_blank" class="btn btn-primary mt-auto">Verify Credential →</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Resume -->
+  <section id="resume" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">Resume</h2>
+    <a href="Resume_Amrit Thapa.pdf" download class="btn btn-outline-primary">Download My Resume</a>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="container py-4" data-aos="fade-up">
+    <h2 class="section-title">Contact</h2>
+    <p>Email: <a href="mailto:athapa.2023@gmail.com">athapa.2023@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/amrit-thapa" target="_blank">linkedin.com/in/amrit-thapa</a></p>
+    <p>Phone: <a href="tel:+15037030978">(503) 703-0978</a></p>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-light text-center py-3 mt-4 border-top">
+    &copy; 2025 Amrit Thapa. All rights reserved.
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>
     AOS.init();
 
-    // Dark/Light Mode Toggle omitted for brevity
+    // Dark/Light Mode Toggle
+    const btn = document.getElementById('theme-toggle');
+    const root = document.documentElement;
+    if (localStorage.theme === 'dark') root.setAttribute('data-theme','dark');
+    btn.textContent = root.getAttribute('data-theme') === 'dark' ? '☀️' : '🌙';
+    btn.addEventListener('click', () => {
+      const isDark = root.getAttribute('data-theme') === 'dark';
+      root.setAttribute('data-theme', isDark ? 'light' : 'dark');
+      localStorage.theme = isDark ? 'light' : 'dark';
+      btn.textContent = isDark ? '🌙' : '☀️';
+    });
 
     // Enlarge Certificate on Click
     document.querySelectorAll('#certificates .cert-img').forEach(img => {
@@ -201,7 +265,19 @@
       });
     });
 
-    // Active-Link Highlight omitted for brevity
+    // Active-Link Highlight on Scroll
+    const sections = document.querySelectorAll('section[id]');
+    const navLinks = document.querySelectorAll('.nav-link');
+    window.addEventListener('scroll', () => {
+      const pos = window.scrollY + 100;
+      sections.forEach(sec => {
+        if (pos >= sec.offsetTop && pos < sec.offsetTop + sec.offsetHeight) {
+          navLinks.forEach(a => a.classList.remove('active'));
+          const cur = document.querySelector(`.nav-link[href="#${sec.id}"]`);
+          if (cur) cur.classList.add('active');
+        }
+      });
+    });
   </script>
 </body>
 </html>
