--- a/index.html
+++ b/index.html
@@ -143,13 +143,70 @@
     </p>
   </section>
 
-  <!-- Work Experience -->
+ <!-- Work Experience -->
   <section id="experience" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Work Experience</h2>
     <div class="row g-4">
-      <!-- Cards omitted for brevity -->
+      <!-- Card 1 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card h-100 shadow-sm work-card">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Engineer I – Techserv Engineering &amp; Consulting, TX</h5>
+            <p class="text-muted mb-3">2024–Present</p>
+            <ul class="mb-0">
+              <li>Designed utility-pole configurations and created PE-ready field packages.</li>
+              <li>Reviewed stress reports using SPIDA and ensured NESC compliance.</li>
+              <li>Generated cost estimates and collaborated with field teams.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Card 2 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card h-100 shadow-sm work-card">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Engineering Intern – InergyX Building Solutions, TX</h5>
+            <p class="text-muted mb-3">2023–2024</p>
+            <ul class="mb-0">
+              <li>Conducted blower-door and duct-leakage tests under PE supervision.</li>
+              <li>Used HVAC software and drones to identify and improve efficiency.</li>
+              <li>Participated in project management and client communication.</li>
+              <li>Contributed to internal innovation projects for energy auditing.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Card 3 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card h-100 shadow-sm work-card">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Graduate Researcher – Entegra Sources Pvt. Ltd, Kathmandu</h5>
+            <p class="text-muted mb-3">May–Aug 2021</p>
+            <ul class="mb-0">
+              <li>Designed a 5 tons/hr plastic cutter & shredder for urban recycling initiatives.</li>
+              <li>Led remote simulations for diverse BPO-based engineering projects.</li>
+              <li>Used AutoCAD, SolidWorks, and ANSYS to develop optimized solutions.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Card 4 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card h-100 shadow-sm work-card">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Mechanical Design Intern – Surya Nepal Pvt. Ltd, Simara</h5>
+            <p class="text-muted mb-3">Sep–Nov 2019</p>
+            <ul class="mb-0">
+              <li>Improved automated packaging efficiency by 6% via geometry optimization.</li>
+              <li>Engineered a cost-effective hydraulic press for tobacco-cake quality control.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+
+
 
   <!-- Certificates -->
   <section id="certificates" class="container py-4" data-aos="fade-up">
