--- a/index.html
+++ b/index.html
@@ -5,94 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Amrit Thapa | Mechanical Engineer</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/style.css">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <style>
-    /* ---------- Theming & Base ---------- */
-    :root { --bg: #f5f7fa; --fg: #333; --primary: #0d6efd; }
-    [data-theme="dark"] { --bg: #121212; --fg: #f0f0f0; --primary: #339af0; }
-    html { scroll-behavior: smooth; }
-    body {
-      margin: 0;
-      background: var(--bg);
-      color: var(--fg);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.6;
-    }
-    a { color: var(--primary); }
-    a:hover { text-decoration: none; }
-
-    /* ---------- Navbar ---------- */
-    .navbar, .bg-light { background-color: var(--bg) !important; }
-    .navbar-light .navbar-nav .nav-link { color: var(--fg); }
-    .navbar-light .navbar-nav .nav-link:hover,
-    .navbar-light .navbar-brand:hover { color: var(--primary) !important; }
-
-    /* Active link highlight */
-    .nav-link.active { font-weight: 600; color: var(--primary) !important; }
-
-    /* ---------- Hero ---------- */
-    .hero {
-      position: relative;
-      background:
-        linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),
-        url('images/hero-bg.jpg') center/cover no-repeat;
-      padding: 6rem 2rem;
-      text-align: center;
-    }
-    .hero img {
-      width: 180px; height: 180px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 1rem;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.3);
-      border: 2px solid #fff;
-    }
-    .hero h1, .hero .lead {
-      color: #fff;
-      text-shadow: 0 2px 6px rgba(0,0,0,0.6);
-    }
-
-    /* ---------- Section Titles & Text ---------- */
-    .section-title {
-      font-size: 2rem;
-      font-weight: 600;
-      margin: 2rem 0 1rem;
-      color: var(--fg);
-    }
-    .lead { font-size: 1.125rem; }
-
-    /* ---------- Work Experience Cards ---------- */
-    #experience .work-card {
-      transition: transform .2s, box-shadow .2s;
-    }
-    #experience .work-card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 8px 24px rgba(0,0,0,0.12);
-    }
-    .card-title { color: var(--primary); }
-
-    /* ---------- Certificates Grid & Images ---------- */
-    #certificates .cert-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
-      gap: 1.5rem;
-      margin-top: 1.5rem;
-    }
-    #certificates .cert-item {
-      text-align: center;
-    }
-    #certificates .cert-img {
-      width: 100%;
-      max-height: 200px;
-      object-fit: contain;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      margin-bottom: .5rem;
-      background: #fff;
-      cursor: pointer;
-    }
-  </style>
 </head>
 <body data-theme="light">
 
@@ -127,7 +41,7 @@
 
   <!-- Hero Section -->
   <section id="top" class="hero" data-aos="fade-up">
-    <img src="images/Profile.JPEG" alt="Profile">
+    <img src="images/Profile.JPEG" alt="Profile photo of Amrit Thapa">
     <h1 class="mb-2">Amrit Thapa</h1>
     <p class="lead">Mechanical Engineer | CFD &amp; FEA | Thermal &amp; Utility Systems</p>
   </section>
@@ -143,7 +57,7 @@
     </p>
   </section>
 
- <!-- Work Experience -->
+  <!-- Work Experience -->
   <section id="experience" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Work Experience</h2>
     <div class="row g-4">
@@ -206,8 +120,6 @@
     </div>
   </section>
 
-
-
   <!-- Certificates -->
   <section id="certificates" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Certificates</h2>
@@ -217,7 +129,7 @@
         <p><strong>Semiconductor Packaging Manufacturing</strong><br>Arizona State University (2024)</p>
       </div>
       <div class="cert-item">
-        <img src="images/openfoam.png" alt="CFD Workshop on OpenFOAM" class="cert-img">
+        <img src="images/openfoam.jpg" alt="CFD Workshop on OpenFOAM" class="cert-img">
         <p><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
       </div>
       <div class="cert-item">
@@ -242,7 +154,7 @@
     </div>
   </div>
 
- <!-- Digital Credentials -->
+  <!-- Digital Credentials -->
   <section id="digital-credentials" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Digital Credentials</h2>
     <p class="mb-4">I’ve received three digital credentials from UT Tyler. Click “Verify” to confirm each on Validity.id:</p>
@@ -276,7 +188,6 @@
       </div>
     </div>
   </section>
-
 
   <!-- Resume -->
   <section id="resume" class="container py-4" data-aos="fade-up">
