--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <p><strong>Semiconductor Packaging Manufacturing</strong><br>Arizona State University (2024)</p>
       </div>
       <div class="cert-item">
-        <img src="images/openfoam.jpg" alt="CFD Workshop on OpenFOAM" class="cert-img">
+        <img src="images/openfoam.png" alt="CFD Workshop on OpenFOAM" class="cert-img">
         <p><strong>CFD Workshop on OpenFOAM</strong><br>Kathmandu University (2020)</p>
       </div>
       <div class="cert-item">
