--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <!-- Resume -->
   <section id="resume" class="container py-4" data-aos="fade-up">
     <h2 class="section-title">Resume</h2>
-    <a href="Resume_Amrit Thapa.pdf" download class="btn btn-outline-primary">Download My Resume</a>
+    <a href="Resume.pdf" download class="btn btn-outline-primary">Download My Resume</a>
   </section>
 
   <!-- Contact -->
